5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1637_2704.log
== TEST (2019-04-09 11:10:12) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)

if (bonificacao == S):
	print(nota1)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:11:33) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)

if (bonificacao == S):
	print(nota1)
else:
	print(nota)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:12:26) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bonificacao == S):
	print(nota1)
else:
	print(nota2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:13:20) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bonificacao == S):
	print(float(nota1))
else:
	print(float(nota2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:13:23) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bonificacao == S):
	print(float(nota1))
else:
	print(float(nota2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:00) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bonificacao == S):
	float(print(nota1))
else:
	float(print(nota2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:22) 
-- CODE:
nota= float(input("aluno:"))
bonificacao= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bonificacao == S):
	print(nota1)
else:
	print(nota2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (bonificacao == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:14:56) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon.upper() == S):
	print(nota1)
else:
	print(nota2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (bon.upper() == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:26) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon == "S"):
	print(nota1)
else:
	print(nota2)
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:15:44) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon == "S"):
	print(nota2)
else:
	print(nota1)
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:18) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/100)
nota2= nota

if (bon == "S"):
	print(nota1)
else:
	print(nota2)
	
-- OUTPUT:
5.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:07) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon == "S"):
	print(round(nota1,2))
else:
	print(round(nota2))
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:18:14) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon == "S"):
	print(round(nota1,2))
else:
	print(round(nota2))
	
-- EXECUTION TIME:
0.145731
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:26) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon == "S"):
	print(round(nota1,2))
else:
	print(round(nota2,2))
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:18:33) 
-- CODE:
nota= float(input("aluno:"))
bon= input("bonificacao:")

nota1= nota + (nota/10)
nota2= nota

if (bon == "S"):
	print(round(nota1,2))
else:
	print(round(nota2,2))
	
-- EXECUTION TIME:
0.210927
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
